--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "axios": "^1.13.4",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-router-dom": "^7.13.0",
+    "tone": "^15.1.22",
     "wavesurfer.js": "^7.12.1"
   },
   "devDependencies": {
